Compiler/log
g++ -std=c++17 syntaxTable.cpp -o test
syntaxTable.cpp: In function ‘int main(int, char**)’:
syntaxTable.cpp:29:31: error: no matching function for call to ‘getline(std::ifstream&, std::stringstream&)’
   29 |   while(std::getline(file, sim)){
      |                               ^
In file included from /usr/include/c++/9/string:56,
                 from /usr/include/c++/9/bits/locale_classes.h:40,
                 from /usr/include/c++/9/bits/ios_base.h:41,
                 from /usr/include/c++/9/ios:42,
                 from /usr/include/c++/9/ostream:38,
                 from /usr/include/c++/9/iostream:39,
                 from syntaxTable.cpp:1:
/usr/include/c++/9/bits/basic_string.tcc:1538:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 1538 |     getline(basic_istream<_CharT, _Traits>& __in,
      |     ^~~~~~~
/usr/include/c++/9/bits/basic_string.tcc:1538:5: note:   template argument deduction/substitution failed:
syntaxTable.cpp:29:31: note:   ‘std::stringstream’ {aka ‘std::__cxx11::basic_stringstream<char>’} is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   29 |   while(std::getline(file, sim)){
      |                               ^
In file included from /usr/include/c++/9/string:55,
                 from /usr/include/c++/9/bits/locale_classes.h:40,
                 from /usr/include/c++/9/bits/ios_base.h:41,
                 from /usr/include/c++/9/ios:42,
                 from /usr/include/c++/9/ostream:38,
                 from /usr/include/c++/9/iostream:39,
                 from syntaxTable.cpp:1:
/usr/include/c++/9/bits/basic_string.h:6456:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 6456 |     getline(basic_istream<_CharT, _Traits>& __is,
      |     ^~~~~~~
/usr/include/c++/9/bits/basic_string.h:6456:5: note:   template argument deduction/substitution failed:
syntaxTable.cpp:29:31: note:   ‘std::stringstream’ {aka ‘std::__cxx11::basic_stringstream<char>’} is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   29 |   while(std::getline(file, sim)){
      |                               ^
In file included from /usr/include/c++/9/string:55,
                 from /usr/include/c++/9/bits/locale_classes.h:40,
                 from /usr/include/c++/9/bits/ios_base.h:41,
                 from /usr/include/c++/9/ios:42,
                 from /usr/include/c++/9/ostream:38,
                 from /usr/include/c++/9/iostream:39,
                 from syntaxTable.cpp:1:
/usr/include/c++/9/bits/basic_string.h:6464:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&&, std::__cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 6464 |     getline(basic_istream<_CharT, _Traits>&& __is,
      |     ^~~~~~~
/usr/include/c++/9/bits/basic_string.h:6464:5: note:   template argument deduction/substitution failed:
syntaxTable.cpp:29:31: note:   ‘std::stringstream’ {aka ‘std::__cxx11::basic_stringstream<char>’} is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   29 |   while(std::getline(file, sim)){
      |                               ^
In file included from /usr/include/c++/9/string:55,
                 from /usr/include/c++/9/bits/locale_classes.h:40,
                 from /usr/include/c++/9/bits/ios_base.h:41,
                 from /usr/include/c++/9/ios:42,
                 from /usr/include/c++/9/ostream:38,
                 from /usr/include/c++/9/iostream:39,
                 from syntaxTable.cpp:1:
/usr/include/c++/9/bits/basic_string.h:6471:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&&, std::__cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 6471 |     getline(basic_istream<_CharT, _Traits>&& __is,
      |     ^~~~~~~
/usr/include/c++/9/bits/basic_string.h:6471:5: note:   template argument deduction/substitution failed:
syntaxTable.cpp:29:31: note:   ‘std::stringstream’ {aka ‘std::__cxx11::basic_stringstream<char>’} is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   29 |   while(std::getline(file, sim)){
      |                               ^
make: *** [Makefile:2: all] Error 1
